# TemplateODB

./: .gitignore  CMakeLists.txt  FindODB.cmake  UseODB.cmake  main.cpp
include/: database.h
include/odb/: person.h
odb/: Person.h
scripts/: create_schema.txt  create_user_and_database.sh  install_libodbv2.5.sh  install_odbv2.5.sh  setup.sh  setup_postgresql.sh
sql/: Person.sql  table_exists.sql
src/: main.cpp
